# turbo-graphql

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark  simd_keyword_mask  test.cpp  test.txt  test.txtD  test2.cpp  test3.cpp  test4.cpp  test_hash.cpp  test_simd
include/: README.md
include/ast/: README.md  ast_arena.h  ast_nodes.h
include/cache/: query_cache.h
include/lexer/: Lexer.h  character_classifier.h  keyword_classifier.h  lexer.h
include/lexer/token/: token.h  token_arena.h  token_type.h
include/parser/: README.md  parser.h
include/runtime/: README.md
include/simd/: simd_detect.h  simd_factory.h  simd_interface.h
include/simd/impl/: avx2_impl.h  avx512_impl.h  neon_impl.h  scalar_impl.h  simd_constants.h  sse_impl.h
include/utils/: SimdDetector.h  SimdUtils.h
src/: main.cpp
src/lexer/: Lexer.cpp  README.md  keyword_classifer.cpp  lexer.cpp
src/lexer/Token/: token_arena.cpp
src/parser/: parser.cpp
src/simd/: simd_detect.cpp  simd_factory.cpp
src/simd/impl/: avx2_impl.cpp  avx512_impl.cpp  neon_impl.cpp  scalar_impl.cpp  sse_impl.cpp
src/utils/: SimdDetector.cpp  SimdUtils.cpp
tests/lexer/: lexer_test.cpp
tests/utils/: simd_utils_test.cpp
